tests/golden/extra-config/mimir/mimir/10_mimir_distributed/mimir-distributed/templates/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: nginx
    app.kubernetes.io/instance: mimir
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mimir
    app.kubernetes.io/version: 2.7.1
    helm.sh/chart: mimir-distributed-4.3.0
  name: mimir-nginx
  namespace: syn-mimir
spec:
  rules:
    - host: metrics-receive.example.com
      http:
        paths:
          - backend:
              service:
                name: mimir-nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - metrics-receive.example.com
      secretName: metrics-receive-example-com-tls
