tests/golden/extra-config/mimir/mimir/10_mimir_distributed/mimir-distributed/templates/nginx/nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/component: nginx
    app.kubernetes.io/instance: mimir
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mimir
    app.kubernetes.io/version: 2.7.1
    helm.sh/chart: mimir-distributed-4.3.0
  name: mimir-nginx
  namespace: syn-mimir
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: nginx
      app.kubernetes.io/instance: mimir
      app.kubernetes.io/name: mimir
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        bucketSecretVersion: '0'
        checksum/config: 288420e47139856cf8f3c6a7a10ea589dce4957c24833010e6b552edb7805362
      labels:
        app.kubernetes.io/component: nginx
        app.kubernetes.io/instance: mimir
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mimir
        app.kubernetes.io/version: 2.7.1
        helm.sh/chart: mimir-distributed-4.3.0
      namespace: syn-mimir
    spec:
      containers:
        - env: null
          envFrom:
            - secretRef:
                name: mimir-bucket-secret
          image: docker.io/nginxinc/nginx-unprivileged:latest
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 8080
              name: http-metric
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http-metric
            initialDelaySeconds: 15
            timeoutSeconds: 1
          resources:
            limits:
              memory: 731Mi
            requests:
              cpu: 1
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /etc/nginx
              name: config
            - mountPath: /etc/nginx/secrets
              name: auth
            - mountPath: /tmp
              name: tmp
            - mountPath: /docker-entrypoint.d
              name: docker-entrypoint-d-override
      nodeSelector:
        appuio.io/node-class: plus
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: mimir
      terminationGracePeriodSeconds: 30
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/component: nginx
              app.kubernetes.io/instance: mimir
              app.kubernetes.io/name: mimir
          maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - configMap:
            name: mimir-nginx
          name: config
        - name: auth
          secret:
            secretName: mimir-nginx-htpasswd
        - emptyDir: {}
          name: tmp
        - emptyDir: {}
          name: docker-entrypoint-d-override
